update game, player, engimon